z-index fix

--- a/src/reject.scss
+++ b/src/reject.scss
@@ -8,6 +8,7 @@
 	left: 0;
 	right: 0;
 	width: 100%;
+	z-index: 1000;
 
 	filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
 
